--- a/robot1_moveit_config/config/fake_controllers.yaml
+++ b/robot1_moveit_config/config/fake_controllers.yaml
@@ -9,5 +9,7 @@ controller_list:
       - robot1_wrist_2_joint
       - robot1_wrist_3_joint
 initial:  # Define initial robot poses per group
-  - group: robot1_manipulator
-    pose: stand
+#  - group: robot1_manipulator
+#    pose: home
+
+  []
